[wmfme] Incorrect error message about `You must enable DRM to play some audio or video on this page` when trying to request information for PlayReady DRM
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox109 | --- | unaffected |
| firefox110 | --- | unaffected |
| firefox111 | --- | verified |
| firefox112 | --- | verified |
People
(Reporter: alwu, Assigned: jhlin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
192.91 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
STR.
- make sure
media.eme.playready.enabledisfalse - go to https://testweb.playready.microsoft.com/Tool/Hwdrm
- click
Submit
Expected.
4. showing false for those results and no error pops up
Actual.
4. showing false for those results and an error You must enable DRM to play some audio or video on this page pops up
| Reporter | ||
Updated•3 years ago
|
| Reporter | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1810817
| Reporter | ||
Comment 4•3 years ago
|
||
Considering the merge date is close, we will need to uplift the fix to beta later after merging. John, would you mind to take a look on this bug? Thanks.
| Assignee | ||
Comment 5•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Comment 6•3 years ago
|
||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
|
||
The following field has been copied from a duplicate bug:
| Field | Value | Source |
|---|---|---|
| Regressed by | bug 1815367 | bug 1816244 |
For more information, please visit auto_nag documentation.
Comment 10•3 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 11•3 years ago
|
||
Comment on attachment 9317131 [details]
Bug 1815762 - don't return "disabled" status for PlayReady.
Beta/Release Uplift Approval Request
- User impact if declined: The pop up with incorrect message would show up when users visit websites using DRM video.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See comment0.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We incorrect enable the DRM detection for PlayReady, and this patch will only detect PlayReady when the pref is on (off by default). This patch doesn't add any new functionality.
- String changes made/needed: No
- Is Android affected?: Unknown
| Reporter | ||
Updated•3 years ago
|
Comment 12•3 years ago
|
||
Comment on attachment 9317131 [details]
Bug 1815762 - don't return "disabled" status for PlayReady.
Approved for 111.0b1.
Comment 13•3 years ago
|
||
| bugherder uplift | ||
Comment 14•3 years ago
|
||
Verified that this issue is no longer reproducible on the latest builds: 111.0b1 and 112.0a1 (latest nightly) across platforms Windows 10, macOS 13, Ubuntu 22.04.
| Assignee | ||
Updated•3 years ago
|
Description
•