Bug 1815762 - don't return "disabled" status for PlayReady. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D169511